<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.example.ben.fitordie.Login.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:title="test"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/MsgMotivation"
        android:textColor="@color/darkishRed"
        android:layout_width="322dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/msgMotivation"
        android:textSize="18sp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.452" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirm"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation" />

    <EditText
        android:id="@+id/passwordOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enterPass"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newUsername"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation" />

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Username"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/MsgMotivation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation" />

    <EditText
        android:id="@+id/passwordConfirm"
        android:hint="@string/enterConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordOne"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation" />

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="216dp"
        android:layout_height="40dp"
        android:text="@string/createAcctBtn"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBtn"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="216dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/google_login"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/orText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="223dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/facebook_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/MsgMotivation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/MsgMotivation" />

</android.support.constraint.ConstraintLayout>
