<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ben.fitordie.Login.LoginActivity">

    <!-- This constraint layout holds the bottom half of the login activity -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottomLoginLayout"
        android:background="@color/lightGray"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="60dp"
            android:layout_height="18dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
            app:layout_constraintVertical_bias="0.133"
            tools:layout_editor_absoluteY="204dp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/username" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginBottom="80dp"
            android:layout_marginRight="-5dp"
            android:layout_marginTop="8dp"
            android:text="Log in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/password"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginRight="-1dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            app:layout_constraintRight_toRightOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/username"
            android:hint="@string/usernameHint"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
