<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ben.fitordie.Login.swipeviews.PageOneFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/hpFragOne"
        android:textColor="@color/blackishGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hpFragOne"
        android:layout_marginLeft="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/healthBar"
        android:layout_marginBottom="-1dp"
        app:layout_constraintBottom_toTopOf="@+id/healthBar" />

    <ImageView
        android:id="@+id/fitOrDieLogo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/fit_or_die_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/fragOneInfo"
        android:layout_width="259dp"
        android:layout_height="41dp"
        android:ems="10"
        android:textSize="15sp"
        android:inputType="textMultiLine"
        android:textColor="@color/blackishGray"
        android:text="@string/fragmentOneInfo"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/fitOrDieLogo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="179dp"
        android:layout_height="151dp"
        app:srcCompat="@drawable/avatar"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/fragOneInfo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.503" />

    <ImageView
        android:id="@+id/healthBar"
        android:layout_width="82dp"
        android:layout_height="16dp"
        app:srcCompat="@drawable/health_bar"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/fragOneInfo"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/fragOneUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragOneUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="26dp"
        app:layout_constraintTop_toTopOf="@+id/hpFragOne"
        android:layout_marginTop="0dp"
        android:textColor="@color/blackishGray"/>

</android.support.constraint.ConstraintLayout>
